Fixed justified alignment for content

--- a/css/wpstyle.css
+++ b/css/wpstyle.css
@@ -148,7 +148,6 @@ div.storycontent ul, div.storycontent ol{
 div.storycontent ul li, div.storycontent ol li{
 	font-size:12px;
 	margin-left:1em;
-    text-align:justify;
 }
 
 div.storycontent ol li{
@@ -187,4 +186,8 @@ li.content_item{
 
 textarea#comment{
 width:700px;
+}
+
+div.storycontent{
+	text-align:justify;
 }
